--- a/21.aws-console.md
+++ b/21.aws-console.md
@@ -1,4 +1,4 @@
-# LAB : AWS Introduction
+# AWS Introduction Lab
 
 Objectives
 
@@ -69,7 +69,7 @@ You are a PowerUser you have `Full access` to most of AWS resources but some res
 
 ![](./images/aws_iam.png)
 
-## Task 5. AWS Policy 
+## Insight 5. AWS Policy
 
 The graphical interface representation is useful to have an overview. You can switch to the declarative representation of the policy by clicking `JSON`
 
@@ -102,7 +102,8 @@ The graphical interface representation is useful to have an overview. You can sw
     ]
 }
 ```
-An AWS policy is defined by the following arguments : 
+
+An AWS policy is defined by the following arguments :
 
 **Version**: Specifies the version of the policy language being used.
 
@@ -167,6 +168,7 @@ Resources on a DMZ can have a public IPv4 address or can be publicly reached fro
 On the other side, resources on a private network should not be reachable from internet and can only access internet via a router performing dynamic NAPT (Network And Port Translation). This is enforced by firewall rules.
 
 On a classical - and may be outdated - three tier application, frontend, backend, database, the network connectivity should look like the following :
+
 - You want to serve customer on a Publicly reachable network (most likely behind a load balancer).
 - Have your backend service running a on a private network with firewall policies allowing the frontend to reach the backend. The backend could reach internet for package update, and applications download.
 - Finally your database on a dedicated network with firewall policies to allow only connections from your backend.
@@ -211,7 +213,7 @@ It's the classical NAT construct. You need to create a NAT Gateway and _pay_ a P
 
 This is the historical construct of AWS, VMs used to be publicly available. 
 Only one can be allocated per VPC and it's available across AZ.
-Technically speaking the Internet GW is doing 1:1 NAT for your instances. At provisioning time AWS allocates a Public IPv4 address for your instance and keeps a <Public IPv4>:<Private IP> translation. The public IPv4 address is allocated but not assigned to your instance, AWS can re-allocate another IP if your reboot your VM. You could also buy a static public IP from AWS if needed [AWS Documentation : Elastic IP](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html). 
+Technically speaking the Internet GW is doing 1:1 NAT for your instances. At provisioning time AWS allocates a Public IPv4 address for your instance and keeps a `Public IPv4:Private IP` translation. The public IPv4 address is allocated but not assigned to your instance, AWS can re-allocate another IP if your reboot your VM. You could also buy a static public IP from AWS if needed [AWS Documentation : Elastic IP](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html).
 
 If a subnet has a routing table entry to the Internet gateway it's referred as a `public network`.
 
