--- a/22.aws-cli.md
+++ b/22.aws-cli.md
@@ -1,6 +1,6 @@
-# LAB: AWS CLI on Linux
+# AWS CLI Lab
 
-The AWS Command Line Interface (AWS CLI) is an open source tool that enables you to interact with AWS services using commands in your command-line shell. With minimal configuration, the AWS CLI enables you to start running commands that implement functionality equivalent to that provided by the browser-based AWS Management Console from the command prompt in your terminal program. 
+The AWS Command Line Interface (AWS CLI) is an open source tool that enables you to interact with AWS services using commands in your command-line shell. With minimal configuration, the AWS CLI enables you to start running commands that implement functionality equivalent to that provided by the browser-based AWS Management Console from the command prompt in your terminal program.
 It's technically a wrapper around AWS REST API.
 
 Automation tools such as Terraform or Ansible will use the configuration file of the AWS CLI to retrieve the access key when performing calls to AWS API.
@@ -15,11 +15,11 @@ sudo apt update && sudo apt install -y unzip jq less groff mandoc
 curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
 ```
 
-```bash 
+```bash
 unzip awscliv2.zip
 ```
 
-```bash 
+```bash
 sudo ./aws/install --update
 ```
 
@@ -41,7 +41,7 @@ You need to specify application credentials for authentication and permissions o
 
 **- Task 3.1 -**
 
-Connect to the training SSO portal : 
+Connect to the training SSO portal :
 
  [__https://intuitivesoft.awsapps.com/start#/__](https://intuitivesoft.awsapps.com/start#/)
 
@@ -195,7 +195,7 @@ Or object Name :
 aws ec2 describe-vpcs --filters Name=tag:Name,Values=pod1-vpc
 ```
 
-## Task 6. Retrieve your EC2 instances 
+## Task 6. Retrieve your EC2 instances
 
 Use `--filters` option to filter to your instance name or tag.
 
@@ -651,7 +651,7 @@ Cleaning VPC : vpc-006ddcf026ca43388
   Delete Security Group sg-0eaf3b02b8886a626
 ```
 
-## Task 13. [Optional] AWS CloudShell
+## Insight 13. AWS CloudShell
 
 From the AWS Web Console you can alteratively access the AWS Cloud shell CLI for testing.
 
