--- a/41.aws-terraform.md
+++ b/41.aws-terraform.md
@@ -1,6 +1,6 @@
-# LAB : AWS Terraform Lab
+# AWS Terraform Lab
 
-**Objectives**
+Objectives
 
 - understand Infrastructure as Code principles
 - understand Terraform HashiCorp configuration language (HCL) and workflow
@@ -65,67 +65,10 @@ To use this profile, specify the profile name using --profile, as shown:
 
 aws s3 ls --profile default
 ```
-**If you misconfigured your environment check the FAQ** 
 
-## Insight 3. Terraform Overview
+**If you misconfigured your environment check the FAQ**
 
-**This lab involves file editing. It's recommended to use the Lab Dashboard Code Editor and installing `Hashicorp Terraform` extension for VSCode**
-
-### What is Infrastructure as Code with Terraform
-
-Infrastructure as code (IaC) tools allow you to manage infrastructure with configuration files rather than through a graphical user interface. IaC allows you to build, change, and manage your infrastructure in a safe, consistent, and repeatable way by defining resource configurations that you can version, reuse, and share.
-
-Terraform is HashiCorp's infrastructure as code tool. It lets you define resources and infrastructure in human-readable, declarative configuration files, and manages your infrastructure's lifecycle. Using Terraform has several advantages over manually managing your infrastructure:
-
-- Terraform can manage infrastructure on multiple cloud platforms.
-- The human-readable configuration language helps you write infrastructure code quickly.
-- Terraform's state allows you to track resource changes throughout your deployments.
-- You can commit your configurations to version control to safely collaborate on infrastructure.
-
-### Manage any infrastructure
-
-Terraform plugins called providers let Terraform interact with cloud platforms and other services via their application programming interfaces (APIs). HashiCorp and the Terraform community have written over 1,000 providers to manage resources on Amazon Web Services (AWS), Azure, Google Cloud Platform (GCP), Kubernetes, Helm, GitHub, Splunk, and DataDog, just to name a few. Find providers for many of the platforms and services you already use in the Terraform Registry (https://registry.terraform.io/browse/providers).
-
-Terraform can manage existing and popular service providers (AWS, GCP, ...) as well as custom in-house solutions (Cisco Intersight, ACI, Kubernetes, VMware, Openstack...).
-
-The infrastructure Terraform can manage includes low-level components such as compute instances, storage, and networking, as well as high-level components such as DNS entries, SaaS features, etc.
-
-The Terraform key features are listed below:
-
-- Infrastructure as Code: Infrastructure is described using a high-level and declarative configuration syntax (HCL: HashiCorp Configuration Language).
-- Execution Plans: Terraform has a "planning" step called execution plan, it shows the changes that will be configured when the plan is applied.
-- Resource Graph: Terraform builds a graph of all your resources, and parallelizes the creation and modification of any non-dependent resources.
-- Change Automation: Terraform keep configuration states (real view of resources configuration) and figure out the changes and in what order to reach the intent.
-
-### Standardize your deployment workflow
-
-Providers define individual units of infrastructure, for example compute instances or private networks, as resources. You can compose resources from different providers into reusable Terraform configurations called modules, and manage them with a consistent language and workflow.
-
-Terraform's configuration language is declarative, meaning that it describes the desired end-state for your infrastructure, in contrast to procedural programming languages that require step-by-step instructions to perform tasks. Terraform providers automatically calculate dependencies between resources to create or destroy them in the correct order.
-
-Terraform workflow includes the following steps:
-
-- terraform init: scan the code, figure out which providers you’re using, and download the code for them.
-- terraform plan: let you see what Terraform will do before actually making any changes
-- terraform apply: to actually create/update/delete the resources
-
-### Dependency Graph
-
-When you add a reference from one resource to another, you create an implicit dependency. Terraform parses these dependencies, builds a dependency graph from them, and uses that to automatically determine in which order it should create resources.
-
-### Track your infrastructure
-
-Terraform keeps track of your real infrastructure in a state file, which acts as a source of truth for your environment. Terraform uses the state file to determine the changes to make to your infrastructure so that it will match your configuration.
-
-Every time you run Terraform, it records information about what infrastructure it created in a Terraform state file. By default, when you run Terraform in the folder /foo/bar, Terraform creates the file /foo/bar/terraform.tfstate. This file contains a custom JSON format that records a mapping from the Terraform resources in your configuration files to the representation of those resources in the real world. 
-
-### Collaborate
-
-Terraform allows you to collaborate on your infrastructure with its remote state backends. When you use Terraform Cloud (free for up to five users), you can securely share your state with your teammates, provide a stable environment for Terraform to run in, and prevent race conditions when multiple people make configuration changes at once.
-
-You can also connect Terraform Cloud to version control systems (VCSs) like GitHub, GitLab, and others, allowing it to automatically propose infrastructure changes when you commit configuration changes to VCS. This lets you manage changes to your infrastructure through version control, as you would with application code.
-
-## Task 4. Install Terraform on Linux
+## Task 3. Install Terraform on Linux
 
 ```bash
 sudo apt update && sudo apt install -y gnupg software-properties-common wget
@@ -150,7 +93,7 @@ Update to add the repository, and install the Terraform CLI.
 sudo apt update && sudo apt install -y terraform
 ```
 
-## Task 5. Verify the installation
+## Task 4. Verify the installation
 
 ```bash
 terraform -help
@@ -168,13 +111,13 @@ less common or more advanced commands.
 Main commands: ...
 ```
 
-## Task 6. Create a subnet (and your first Terraform script)
+## Task 5. Create a subnet (and your first Terraform script)
 
 Create a folder on the Linux machine to host the Terraform script you are going to write for that very first step. Example ```mkdir create-subnet```. In that dedicated folder create a file called ```main.tf```.
 
-## Task 7. Define create-subnet main script
+## Task 6. Define create-subnet main script
 
-**- Task 7.1 -**
+**- Task 6.1 -**
 
 Terraform code is written in the HashiCorp Configuration Language (HCL) in files with the extension .tf. It is a declarative language, so your goal is to describe the infrastructure you want, and Terraform will figure out how to create it. The first step to using Terraform is typically to configure the provider(s) you want to use. Create an empty folder and put a file in it called ```main.tf``` that contains the following contents:
 
@@ -188,7 +131,7 @@ where:
 
 - ```region``` is the us-east-1 region
 
-**- Task 7.2 -**
+**- Task 6.2 -**
 
 For each type of provider, there are many different kinds of resources that you can create, such as servers, databases, and load balancers. The general syntax for creating a resource in Terraform is:
 
@@ -238,7 +181,7 @@ resource "aws_subnet" "this" {
 }
 ```
 
-## Task 8. Terraform init
+## Task 7. Terraform init
 
 In a terminal, go into the folder where you created main.tf and run the terraform init command:
 
@@ -270,7 +213,7 @@ commands will detect it and remind you to do so if necessary.
 
 The ```terraform``` binary contains the basic functionality for Terraform, but it does not come with the code for any of the providers (e.g., the AWS provider, Azure provider, GCP provider, etc.), so when you’re first starting to use Terraform, you need to run ```terraform init``` to tell Terraform to scan the code, figure out which providers you’re using, and download the code for them. By default, the provider code will be downloaded into a ```.terraform``` folder, which is Terraform’s scratch directory (you may want to add it to .gitignore). Terraform will also record information about the provider code it downloaded into a ```.terraform.lock.hcl``` file.  Just be aware that you need to run init any time you start with new Terraform code, and that it’s safe to run init multiple times (the command is idempotent).
 
-## Task 9. Terraform plan
+## Task 8. Terraform plan
 
 Now that you have the provider code downloaded, run the terraform plan command:
 
@@ -322,7 +265,7 @@ Note: You didn't use the -out option to save this plan, so Terraform can't guara
 
 The ```plan``` command lets you see what Terraform will do before actually making any changes. This is a great way to sanity check your code before unleashing it onto the world. The output of the plan command is similar to the output of the ```diff``` command that is part of Unix, Linux, and git: anything with a plus sign ```(+)``` will be created, anything with a minus sign ```(–)``` will be deleted, and anything with a tilde sign ```(~)``` will be modified in place. In the preceding output, you can see that Terraform is planning on creating an AWS subnet and nothing else, which is exactly what you want.
 
-## Task 10. Terraform apply
+## Task 9. Terraform apply
 
 To actually create the subnet, run the terraform apply command:
 
@@ -390,7 +333,7 @@ Congrats, you’ve just deployed a subnet in your AWS account using Terraform! T
 
 ![](images/terraform-create-subnet.png)
 
-## Task 11. Terraform state
+## Task 10. Terraform state
 
 You can notice a file named terraform.tfstate in the folder from where you run the terraform script. Terraform maintain the state of the configuration in that file, meaning that if you delete the subnet from the AWS console, you will have a mismatch between the configuration intent specified in the terraform.tfstate file and what is really configured on AWS. 
 
@@ -439,7 +382,7 @@ terraform apply
 
 and input ```yes``` when asked, and check the subnet is created on the AWS console.
 
-## Task 12. Terraform show
+## Task 11. Terraform show
 
 When you run ```terraform show``` you can inspect the configuration state as it is stored by Terraform. You should have something similar to:
 
@@ -471,7 +414,7 @@ resource "aws_subnet" "this" {
 }
 ```
 
-## Task 13. Terraform destroy
+## Task 12. Terraform destroy
 
 When you’re done experimenting with Terraform, either at the end of this section, or at the end of future sections, it’s a good idea to remove all of the resources you created so that AWS doesn't’t charge you for them. Because Terraform keeps track of what resources you created, cleanup is simple. All you need to do is run the destroy command:
 
@@ -539,13 +482,13 @@ And you can check that there is no more subnet in the AWS Console:
 
 ![](images/terraform-destroy-subnet.png)
 
-## Task 14. Create Terraform variables
+## Task 13. Create Terraform variables
 
-**-Task 14.1-**
+**-Task 13.1-**
 
 copy your current ```main.tf``` script in another folder named ```create-subnet-with-variables```
 
-**-Task 14.2-**
+**-Task 13.2-**
 
 Input variables let you customize aspects of Terraform modules without altering the module's own source code. This allows you to share modules across different Terraform configurations, making your module composable and reusable. 
 
@@ -583,7 +526,7 @@ cidr_block = "192.168.1.0/24"
 subnet_name = "podx-public-subnet"
 ```
 
-## Task 15. Re-write your script with variable references
+## Task 14. Re-write your script with variable references
 
 The new main.tf file is re-written to leverage the variables definition file as they are know accessible through the ```var``` prefix:
 
@@ -607,7 +550,7 @@ resource "aws_subnet" "this" {
 Within the module that declared a variable, its value can be accessed from within expressions as var.<NAME>, where <NAME> matches the label given in the declaration block.
 Note: Input variables are created by a variable block, but you reference them as attributes on an object named var.
 
-## Task 16. Check the create-subnet still work
+## Task 15. Check the create-subnet still work
 
 Check that the re-factored code is still working fine by exercising Terraform workflow: 
 1. terraform init
@@ -615,7 +558,7 @@ Check that the re-factored code is still working fine by exercising Terraform wo
 3. terraform apply 
 4. terraform destroy
 
-## Task 17. Let's use datasource and output in Terraform
+## Task 16. Let's use datasource and output in Terraform
 
 copy your current ```create-subnet-with-variables``` folder in another folder named ```create-subnet-with-datasource```. 
 
@@ -635,7 +578,7 @@ tree . -all
 └── variables.tf
 ```
 
-## Task 18. Add datasource to main script
+## Task 17. Add datasource to main script
 
 Instead of defining the ```vpc_id``` as a variable we can use Terraform to read the ```aws_vpc``` resource we created manually in order to retrieve the configured object structure. Data sources allow Terraform to use information defined outside of Terraform, defined by another separate Terraform configuration, or modified by functions. A data source is accessed via a special kind of resource known as a data resource, declared using a data block
 
@@ -686,7 +629,7 @@ When the ```aws_subnet``` resource is created, we can now refer to the ```aws_vp
 
 Therefore note the ```vpc_id = data.aws_vpc.this.id``` in the resource configuration definition.
 
-## Task 19. Modify variables and values
+## Task 18. Modify variables and values
 
 As we are not using the vpc_id variable anymore but the vpc_name, it has to be defined in the ```variables.tf``` and ```terraform.tfvars``` files.
 
@@ -721,7 +664,7 @@ subnet_name = "podx-public-subnet"
 
 **Remark**. Note that the variable *vpc_name* is a "list" and not a string. This is simply due to the [AWS API](https://docs.aws.amazon.com/cli/latest/reference/ec2/describe-vpcs.html) which takes a list as arguments ("values", plural, with an S). The parameter in the '.tfvars' file is thus defined with square brackets ["pod2-vpc"], specifying a list (as in many other languages). 
 
-## Task 20. Check the create-subnet still work
+## Task 19. Check the create-subnet still work
 
 Check that the re-factored code is still working fine by exercising Terraform workflow: 1. terraform init, 2. terraform plan, 3. terraform apply and 4. terraform destroy.
 
@@ -755,7 +698,7 @@ vpc_cidr_block = "192.168.0.0/16"
 vpc_id = "vpc-REDACTED"
 ```
 
-## Task 21. Create 2x subnets script
+## Task 20. Create 2x subnets script
 
 Based on what you have seen from the previous steps, please define and test a terraform script which create two subnets like:
 
@@ -768,13 +711,13 @@ Based on what you have seen from the previous steps, please define and test a te
 
 Ideally create a folder named ```create-2-subnets``` to place your script and other files.
 
-## Task 22. Test your script
+## Task 21. Test your script
 
 Check that the code is working fine by exercising Terraform workflow: 1. terraform init, 2. terraform plan, 3. terraform apply and 4. terraform destroy. Please check on the AWS console you have achieved the right results, you should see something similar to:
 
 ![](images/terraform-create-2-subnets.png)
 
-## Task 23. Create a custom route table
+## Task 22. Create a custom route table
 
 For this step it is asked to define a Terraform script (with associated variables definition) to create a route table with the following attributes:
 
@@ -801,13 +744,13 @@ To help with the exercise don't hesitate to have a look to the Terraform documen
 - ```aws_route_table```: <https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table>
 - ```aws_route_table_association```: <https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table_association>
 
-## Task 24. Test your create-route-table script
+## Task 23. Test your create-route-table script
 
 Check that the code is working fine by exercising Terraform workflow: 1. terraform init, 2. terraform plan, 3. terraform apply and 4. terraform destroy. Please check on the AWS console you have achieved the right results, you should see something similar to:
 
 ![](images/terraform-create-route-table.png)
 
-## Task 25. Create a security group
+## Task 24. Create a security group
 
 For this task it is asked to define a Terraform script (with associated variables definition) to create a security group with the following attributes:
 
@@ -829,13 +772,13 @@ To help with the exercise don't hesitate to have a look to the Terraform documen
 
 - ```aws_security_group```: https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group
 
-## Task 26. Test your script
+## Task 25. Test your script
 
 Check that the code is working fine by exercising Terraform workflow: 1. terraform init, 2. terraform plan, 3. terraform apply and 4. terraform destroy. Please check on the AWS console you have achieved the right results, you should see something similar to:
 
 ![](images/terraform-create-security-group.png)
 
-## Task 27. Create a key pair
+## Task 26. Create a key pair
 
 For this task it is asked to define a Terraform script (with associated variables definition) to create a key pairs with the following attributes:
 
@@ -855,7 +798,7 @@ Ideally create a folder named ```create-key-pair``` to place your script and oth
 
 To help with the exercise don't hesitate to have a look to the Terraform documentation.
 
-## Task 28. Test your script
+## Task 27. Test your script
 
 Check that the code is working fine by exercising Terraform workflow: 1. terraform init, 2. terraform plan, 3. terraform apply and 4. terraform destroy. Please check on the AWS console you have achieved the right results, you should see something similar to:
 
@@ -869,7 +812,7 @@ You should have something similar to that:
 -----END RSA PRIVATE KEY-----
 ```
 
-## Task 29. Create an EC2 instance
+## Task 28. Create an EC2 instance
 
 For this task it is asked to define a Terraform script (with associated variables definition) to create an EC2 instance with the following attributes:
 
@@ -898,7 +841,7 @@ Ideally create a folder named ```create-ec2-instance``` to place your script and
 
 To help with the exercise don't hesitate to have a look to the Terraform documentation !
 
-## Task 30. Test your script
+## Task 29. Test your script
 
 Check that the code is working fine by exercising Terraform workflow: 1. terraform init, 2. terraform plan, 3. terraform apply and 4. terraform destroy. Please check on the AWS console you have achieved the right results, you should see something similar to:
 
@@ -941,7 +884,7 @@ ubuntu@ip-192-168-1-46:~$
 
 Note the prompt of the instance indicating the IP address which has been allocated to the VM on the ```podx-public-subnet``` subnet.
 
-## Task 31. Terraform graph
+## Task 30. Terraform graph
 
 Terraform manages for you the dependency resolution, i.e. it is capable to understand which resources have to be deployed first as others depend of it, as well as deploying independent resources in parallel.
 
