--- a/41.aws-terraform.md
+++ b/41.aws-terraform.md
@@ -115,6 +115,8 @@ Main commands: ...
 
 Create a folder on the Linux machine to host the Terraform script you are going to write for that very first step. Example ```mkdir create-subnet```. In that dedicated folder create a file called ```main.tf```.
 
+**This lab involves file editing. It's recommended to use the Lab Dashboard Code Editor and installing `Hashicorp Terraform` extension for VSCode**
+
 ## Task 6. Define create-subnet main script
 
 **- Task 6.1 -**
