--- a/41.aws-terraform.md
+++ b/41.aws-terraform.md
@@ -772,7 +772,7 @@ Ideally create a folder named ```create-security-group``` to place your script a
 
 To help with the exercise don't hesitate to have a look to the Terraform documentation, for example on:
 
-- ```aws_security_group```: https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group
+- ```aws_security_group```: <https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group>
 
 ## Task 25. Test your script
 
